feat(rag): 实现 Elasticsearch 混合检索